adds prev/next buttons to carousel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <body>
     <h2>Carousel</h2>
     <div class="carousel-main-container">
+      <button class="previous" onclick="progressSlides(-1)">&#12296;</button>
+      <button class="next" onclick="progressSlides(1)">&#12297;</button>
       <div class="carousel-image">
         <img src="resources/image-1.jpg" alt="mountain mists" class="slide" />
       </div>
